# ROS2_pick_and_place_UR5

./: README.md  README_gripper_instruction.md  galactic.repos
moveit_ur5_interface/: CMakeLists.txt  README.md  package.xml
moveit_ur5_interface/include/moveit_ur5_interface/: moveit_pose_client.hpp  moveit_pose_server.hpp
moveit_ur5_interface/launch/: moveit_ur5.launch.py  moveit_ur5_interface.launch  moveit_ur5_interface_sim.launch
moveit_ur5_interface/src/: moveit_client_node.cpp  moveit_interface.cpp  moveit_pose_client.cpp  moveit_pose_server.cpp  moveit_server_node.cpp
moveit_ur5_msgs/: CMakeLists.txt  package.xml
moveit_ur5_msgs/srv/: PlanRequest.srv
pnp_actionlib/: CMakeLists.txt  README.md  package.xml
pnp_actionlib/include/pnp_actionlib/: gripper_action.hpp  pnp_action.hpp  robot_action.hpp
pnp_actionlib/launch/: ur5_pnp_actionlib.launch  ur5_pnp_actionlib_sim.launch
pnp_actionlib/src/: gripper_action.cpp  pnp_action.cpp  pnp_client.cpp  pnp_server.cpp  robot_action.cpp
pnp_msgs/: CMakeLists.txt  package.xml
pnp_msgs/action/: Gripper.action  PickAndPlace.action  Robot.action
robotiq_description/: CMakeLists.txt  package.xml
ur5_gripper_description/: CMakeLists.txt  package.xml
ur5_gripper_description/urdf/: ur.urdf.xacro  ur5_robotiq85_gripper.urdf.xacro  ur_macro.xacro
ur5_gripper_moveit_config/: CMakeLists.txt  package.xml
ur5_gripper_moveit_config/config/: controllers.yaml
ur5_gripper_moveit_config/launch/: ur5_gripper_moveit.launch.py
ur5_gripper_moveit_config/srdf/: ur_gripper.srdf.xacro  ur_gripper_macro.srdf.xacro
